<resources>
    <string name="app_name">Checkpoint4</string>
    <string name="e_mail">E-mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="bienvenue_au_wild_freak_show">Bienvenue au Wild Freak Show</string>
    <string name="supprimer">Supprimer</string>
    <string name="retour">retour</string>
    <string name="rafraichir">Rafraichir</string>
</resources>
